@@ -1,3 +1,5 @@
+- tab-completion in the console will do partial completion, if all potential completion have a common start
+- fixed: file-name completion would always assume the home directory as the current directory
 - compilation fix for FreeBSD (thanks to Thierry Thomas)
 - fixed: when executing commands line by line from the script editor, line breaks would be omitted
 - Messages, warnings, and errors for plugin commands are shown in the output, instead of in a dialog
